--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="LogIn" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="SignUp" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Login" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Registration" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Home" tabIcon="contacts"></ion-tab>
 </ion-tabs>
